--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -9,6 +9,7 @@ body {
 	background-image: linear-gradient(-90deg, #267871 ,#146B89);
 	color: $font-color;
 	font-family: 'Yantramanav', Helvetica, Arial, sans-serif;
+  font-weight: 300;
 	font-size: 20px;
 	line-height: 1.4;
 	-webkit-font-smoothing: antialiased;
@@ -17,4 +18,8 @@ body {
 a{
   color: $font-color;
   text-decoration: none;
+}
+
+h1, h2, h3{
+  font-weight: 300;
 }
