Add favicon and small changes - smaller font weight

--- a/_sass/_footer.scss
+++ b/_sass/_footer.scss
@@ -12,8 +12,8 @@ footer {
     display: inline-block;
     letter-spacing: -1px;
     list-style: none;
-    a
-      {
+    a 
+      {font-weight: 300;
       &:hover 
       { 
       font-weight: 600;
