--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,8 @@
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
   <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  
+    <link rel="shortcut icon" type="image/x-icon" href="{{ "/img/favicon.ico" | prepend: site.baseurl }}">
   <link href='https://fonts.googleapis.com/css?family=Yantramanav:400,700,900,500,300' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.baseurl }}">
