--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -32,6 +32,7 @@
         margin: 0px;
       }
       a {
+        font-weight: 300;
         opacity: 0.8;
         font-size: 20px;
         display: inline-block;
