Make shout responsive

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,6 @@
 .shout{
   text-align: center;
-  margin: 130px;
+  margin: 130px 0 130px 0;
   h1 {
       font-size: 70px;
       margin-bottom: 0px;
@@ -11,6 +11,24 @@
   h1, h2{
     font-weight: 100;
     opacity: 0.7;
+  }
+  @media (max-width:739px) {
+    h1 {
+        font-size: 50px;
+        margin-bottom: 0px;
+    }
+    h2{
+      font-size:25px;
+    }
+  }
+  @media (max-width:600px) {
+    h1 {
+        font-size: 40px;
+        margin-bottom: 0px;
+    }
+    h2{
+      font-size:20px;
+    }
   }
 }
 
