Cleaned up UI - light grey background - add logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header class="page-header">
 	<div class="page-header__content">
-    <a href="{{ site.baseurl }}/" class="logo">mk</a>
+    <a href="{{ site.baseurl }}/" class="logo">
+      {% include icons/mk-logo.html %} 
+    </a>
 		<nav >
 			<ul>
           <li><a href="{{ "/about" | prepend: site.baseurl }}">about</a></li>
