--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,12 +1,12 @@
 $content-width: 700px;
-$font-color: #fafafa;
-$line-color: #f4f4f4;
+$font-color: #464646;
+$line-color: #c7c7c7;
 $link-hover-color: #ffffff;
 
 
 body {
   margin: 0px;
-	background-image: linear-gradient(-90deg, #267871 ,#146B89);
+	background-color:f4f4f4;
 	color: $font-color;
 	font-family: 'Yantramanav', Helvetica, Arial, sans-serif;
   font-weight: 300;
