--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -7,17 +7,11 @@
   &__content {
     max-width: $content-width;
     margin: 0 auto;
-    padding: 25px 10px;
+    padding: 15px 10px;
   }
   .logo {
-    opacity: 0.8;
     display: inline-block;
-    font-weight: 100;
-    letter-spacing: 3px;
-    color:$font-color;
-    &:hover {
-      opacity: 1;
-    }
+    width: 40px;
   }
   nav {
   float: right;
