Add new icon - add hover effect to icon - change link color

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -2,11 +2,14 @@ $content-width: 700px;
 $font-color: #464646;
 $line-color: #c7c7c7;
 $link-hover-color: #ffffff;
+$black: #3c4646;
+$green-80:#8cd211;
+$green-100:#5aa700;
+$grey-60: #f4f4f4;
 
 
 body {
   margin: 0px;
-	background-color:f4f4f4;
 	color: $font-color;
 	font-family: 'Yantramanav', Helvetica, Arial, sans-serif;
   font-weight: 300;
@@ -16,8 +19,7 @@ body {
 }
 
 a{
-  color:$font-color ;
-  font-weight: 500;
+  color:$green-100 ;
   text-decoration: none;
 }
 
