--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -13,16 +13,22 @@ body {
 	color: $font-color;
 	font-family: 'Yantramanav', Helvetica, Arial, sans-serif;
   font-weight: 300;
-	font-size: 20px;
-	line-height: 1.4;
+	font-size: 22px;
+	line-height: 1.3;
 	-webkit-font-smoothing: antialiased;
 }
 
-a{
+a {
   color:$green-100 ;
   text-decoration: none;
 }
 
-h1, h2, h3{
+h1, h2, h3 {
   font-weight: 300;
+}
+
+h1 {
+  font-size: 45px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
