--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -4,7 +4,7 @@ $line-color: #c7c7c7;
 $link-hover-color: #ffffff;
 $black: #3c4646;
 $green-80:#8cd211;
-$green-100:#5aa700;
+$green-100:#00c775; 
 $grey-60: #f4f4f4;
 
 
